# smartfin-fw3

./: .clang-format  .gitignore  .gitmodules  .releaserc  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  README.md  package-lock.json  project.properties  requirements.txt  semantic_release_prepare.py  smartfin-fw3.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release_binary.yml  test.yml
docs/: RideTask.puml  application.puml  arch.puml  architecture.md  control_flow.puml  fw_flow.puml  index.md  refs.bib  requirements.txt  sampling_algorithm copy.ipynb  sampling_algorithm.ipynb  scheduler_documentation.tex  scheduler_gantt.py  state-switches.md  system_test_procedure.md
gtests/: CMakeLists.txt  Makefile  gtest.cpp  scheduler_functions.cpp
latex/: main.tex
lib/AssetTrackerRK/: project.properties
lib/SpiFlashRK/examples/2-unittest-winbond/: 2-unittest-winbond.cpp
lib/SpiffsParticleRK/src/: SpiffsParticleRK.cpp
lib/gps-quectel/: README.md  library.properties
lib/gps-quectel/src/: quecGNSS.cpp  quecGNSS.h  quectelGNSSCoreI2C.cpp  quectelGNSSCoreI2C.h
lib/icm-20948/: library.properties
lib/icm-20948/examples/PortableC/Example999_Portable/: Example999_Portable.ino
lib/icm-20948/src/: ICM_20948.cpp  ICM_20948.h
lib/tracker-edge/: project.properties
lib/tracker-edge/src/: location_service.cpp
pc_hal/: CMakeLists.txt  Particle.h  Particle_dummy.cpp  SPI.h  conioHistory.cpp  conioHistory.hpp  main.cpp
src/: a_deploymentSchedule.hpp  a_scheduler.cpp  a_scheduler.hpp  a_test.cpp  abstractScheduler.hpp  antara_scheduler.cpp  antara_scheduler.hpp  chargeTask.cpp  chargeTask.hpp  charlie_scheduler.cpp  charlie_scheduler.hpp  consts.hpp  deploymentSchedule.hpp  ensembleTypes.hpp  ensembles.cpp  ensembles.hpp  old_schedule.cpp  old_schedule.hpp  product.hpp  rideTask.cpp  rideTask.hpp  scheduler.cpp  scheduler.hpp  simulation.cpp  simulation.hpp  sleepTask.cpp  sleepTask.hpp  smartfin-fw3 copy.txt  smartfin-fw3.cpp  smartfin-fw3.ino  states.cpp  states.hpp  system.cpp  system.hpp  task.hpp  typedef.hpp  util.cpp  util.hpp  vers.cpp  vers.hpp
src/cellular/: base64.c  base64.h  dataCollection.cpp  dataCollection.hpp  dataUpload.cpp  dataUpload.hpp  deploy.cpp  deploy.hpp  ensembleTypes.cpp  ensembleTypes.hpp  recorder.cpp  recorder.hpp  scheduler.cpp  scheduler.hpp  sf_cloud.cpp  sf_cloud.hpp
src/cellular/encoding/: base64.c  base64.h  base85.c  base85.h
src/cli/: cli.cpp  cli.hpp  cliDebug.cpp  cliDebug.hpp  conio.cpp  conio.hpp  conioHistory.cpp  conioHistory.hpp  flog.cpp  flog.hpp  menu.cpp  menu.hpp
src/cli/menuItems/: cli.cpp  cli.hpp  conio.cpp  conio.hpp  debugCommands.cpp  debugCommands.hpp  gpsCommands.cpp  gpsCommands.hpp  systemCommands.cpp  systemCommands.hpp
src/debug/: recorder_debug.cpp  recorder_debug.hpp  session_debug.cpp  session_debug.hpp
src/deploy/: ensembleTypes.cpp  ensembleTypes.hpp  ensembles.cpp  ensembles.hpp  scheduler.cpp  scheduler.hpp
src/fileCLI/: fileCLI.cpp  fileCLI.hpp
src/gps/: location_service.cpp  location_service.h
src/i2c/: i2c.cpp  i2c.h  mbed.h
src/imu/: ICM20648.cpp  ICM20648.h  imu.cpp  imu.hpp  imu_1.cpp  newIMU.cpp  newIMU.hpp
src/imu/ICM-20948/: ICM_20948.cpp  ICM_20948.h  README.md
src/mfgTest/: mfgTest.cpp  mfgTest.hpp
src/sensors/: PCGPS.cpp  PCGPS.hpp  TinyGPSMod.cpp  TinyGPSMod.h  abstractGPS.hpp
src/sys/: NVRAM.cpp  NVRAM.hpp  led.cpp  led.hpp
src/temperature/: i2c.cpp  max31725.h  max31725_cpp.h  max317275_cpp.cpp  mbed.h  tempCal.cpp  tempCal.hpp  tmpSensor.cpp  tmpSensor.h
src/watersensor/: waterSensor.cpp  waterSensor.hpp
tests/: CMakeLists.txt  Create_New_Tests.md  Makefile  README.md  examine_behaivor.cpp  examine_behavior.cpp  file_google_tests.cpp  fixed_google_tests.cpp  fixed_google_tests_v2.cpp  gtest.cpp  log.txt  overlap_google_tests.cpp  requirements.txt  run_gtests  run_gtests.sh  run_test.sh  scheduler_functions.hpp  scheduler_proccessor.py  scheduler_test.cpp  scheduler_test_flog.cpp  scheduler_test_system.cpp  scheduler_test_system.hpp  temp_encoding.ipynb  test  test.cpp  test_coreFiles.cpp  test_endianness.cpp  test_ensembles.cpp  test_ensembles.hpp  test_file_generator.py  test_file_system.cpp  test_file_system.hpp
tests/inputs/: delay.txt  example.txt
tests/no_check_inputs/: test.txt  test0.txt  test1.txt  test2.txt  test3.txt
tests/test.dSYM/Contents/Resources/DWARF/: test
tests/test.dSYM/Contents/Resources/Relocations/x86_64/: test.yml
